<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColour">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/constraint1"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/ParentHomeTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Admin Home"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-3dp" />

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="56dp"
            android:layout_height="58dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/signout"
            android:paddingTop="@dimen/default_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <ImageView
                android:id="@+id/imageView6"
                android:layout_width="134dp"
                android:layout_height="104dp"
                android:layout_marginTop="96dp"
                android:contentDescription="@string/manage_StudentDetails"
                android:paddingTop="@dimen/default_gap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_ManageStudents"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/students" />

            <Button
                android:id="@+id/button_Manage_communication"
                android:layout_width="0dp"
                android:layout_height="59dp"
                android:layout_marginTop="44dp"
                android:background="#75AF4C53"
                android:contentDescription="@string/communication_parents"
                android:text="@string/communication_parents"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/guideline10"
                app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="134dp"
        android:layout_height="76dp"
        android:layout_marginBottom="108dp"
        android:contentDescription="@string/communication"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_Manage_communication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/communication" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="471dp" />

    <Button
        android:id="@+id/button_Manage_events"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:background="#764CAF50"
        android:contentDescription="@string/manage_Events"
        android:text="@string/manage_Events"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.615" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="134dp"
        android:layout_height="113dp"
        android:contentDescription="@string/events"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_Manage_events"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/events" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="331dp" />

    <Button
        android:id="@+id/button_Manage_notifications"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#58CDDC39"
        android:contentDescription="@string/manage_Notifications"
        android:text="@string/manage_Notifications"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.632" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="203dp" />


    <Button
        android:id="@+id/button_ManageStudents"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:background="#23200707"
        android:bufferType="normal"
        android:contentDescription="@string/manage_StudentDetails"
        android:fontFamily="sans-serif"
        android:text="@string/manage_StudentDetails"
        android:textColor="#000000"
        android:textColorHint="#DC3535"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/imageView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="134dp"
        android:layout_height="89dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/notifications"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_Manage_notifications"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/notice" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="44dp"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="681dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>