<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundColour">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/constraint1"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/ParentHomeTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Parent Home"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-3dp" />

        <ImageButton
            android:id="@+id/logout"
            android:layout_width="56dp"
            android:layout_height="58dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/signout"
            android:paddingTop="@dimen/default_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <Button
            android:id="@+id/button_communication"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:layout_marginBottom="36dp"
            android:background="#75AF4C53"
            android:contentDescription="@string/communication"
            android:text="@string/communication"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            app:layout_constraintVertical_bias="0.976" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="134dp"
            android:layout_height="104dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/view_profile"
            android:paddingTop="@dimen/default_gap"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_viewProfileParent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/profile" />

        <Button
            android:id="@+id/button_events"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_marginBottom="16dp"
            android:background="#764CAF50"
            android:contentDescription="@string/events"
            android:text="@string/events"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:layout_constraintVertical_bias="0.66"/>

        <Button
            android:id="@+id/button_notifications_parents"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:background="#58CDDC39"
            android:contentDescription="@string/notifications"
            android:text="@string/notifications"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="134dp"
            android:layout_height="89dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/notifications"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_notifications_parents"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/notice" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="134dp"
            android:layout_height="113dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/events"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_events"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/events" />

        <Button
            android:id="@+id/button_viewProfileParent"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="72dp"
            android:background="#3A2196F3"
            android:bufferType="normal"
            android:contentDescription="@string/view_Kidsprofile"
            android:fontFamily="sans-serif"
            android:text="@string/view_Kidsprofile"
            android:textColor="#000000"
            android:textColorHint="#DC3535"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="btnClickedViewProfileParent"/>




        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="30dp"
            app:layout_constraintGuide_percent="0.0" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="134dp"
            android:layout_height="76dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/communication"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_communication"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/communication" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="164dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="301dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="429dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="566dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>